<!--
  ~ Copyright (C) 2020 The Android Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources>
    <string name="app_name">Find Doggie</string>
    <string name="permission_deny_text">Required permissions denied. Exiting.</string>
    <string name="tensorflow_lite_logo_description">TensorFlow Lite logo</string>
    <string name="content_desc">CONTENT DESCRIPTION</string>
    <string name="add_label">Añadir</string>
    <string name="nombre_del_perro">Nombre del perro</string>
    <string name="fecha_de_rescate">Fecha de rescate</string>
    <string name="peso">Peso</string>
    <string name="macho">Macho</string>
    <string name="hembra">Hembra</string>
    <string name="sexo">Sexo</string>
    <string name="nombre">Nombre</string>
    <string name="fecha">Fecha</string>
    <string name="responsable">Responsable</string>
</resources>